[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keysentinel"
version = "0.2.0"
description = "CLI sentinel that detects compromised API keys, audits provider usage, and automates remediation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Pierpy", email = "pierpaolorenda@gmail.com" }]
keywords = ["security", "api-keys", "secrets", "leak-detection", "sentinel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "cryptography>=42",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
keysentinel = "keysentinel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["keysentinel*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
